# napl

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
yapl/: Cargo.toml  readme.md  state.md
yapl/src/: lib.rs  tests.rs
yapl/src/ast/: ast.rs  builtin.rs  context.rs  mod.rs  object.rs  project.rs
yapl/src/common/: error.rs  file.rs  location.rs  mod.rs  other.rs  space.rs  symbol.rs
yapl/src/dfg/: builtin.rs  function.rs  instance.rs  mod.rs  set.rs  space.rs  trait.rs  type.rs
yapl/src/glue/: ast22dfg.rs  errors.rs  mod.rs  parser2ast.rs
yapl/src/lexer/: mod.rs  types.rs
yapl/src/parser/: ast.rs  errors.rs  lexer.rs  line.rs  lines.rs  mod.rs  readme.md  stream.rs  symbol.rs  tree.rs  unit.rs
yapl/tests/: ast.rs  example.yapl  parser.rs  simple.yapl
yapl/tests/auxiliary/: test_ast.out  test_ast.yapl  test_basics.out  test_basics.yapl  test_basics_ast.out  test_parser.out  test_parser.yapl
