[package]
name = "yapl"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
derive-new = "0.5"
serde = { version = "1.0.152", features = ["derive"] }
# getset = "0.1.2"
# serde_json = "1.0.93"
# daggy = "0.8"
# lazy_static = "1.4.0"
# thiserror = "1.0.39"
# codemap = "0.1.3"
# codemap-diagnostic = "0.1.1"

[lib]
name = "yapl"
